--- a/QuickMath/View/Base.lproj/Main.storyboard
+++ b/QuickMath/View/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Practice-->
+        <!--Home View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="QuickMath" customModuleProvider="target" sceneMemberID="viewController">
@@ -34,6 +34,9 @@
                                                     <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
                                                     <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="numberButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DfT-df-ezi"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YFr-u0-sld">
                                                 <rect key="frame" x="180" y="0.0" width="150" height="40"/>
@@ -46,6 +49,9 @@
                                                     <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
                                                     <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="numberButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wi7-Bb-cM6"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -256,26 +262,34 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="Pt6-4Y-7iz">
-                                <rect key="frame" x="81.333333333333329" y="201.66666666666666" width="227.66666666666669" height="30"/>
+                                <rect key="frame" x="76.666666666666686" y="201.66666666666666" width="237" height="30"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stage 1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pv9-C3-G1L">
-                                        <rect key="frame" x="0.0" y="0.0" width="79.666666666666671" height="30"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pv9-C3-G1L">
+                                        <rect key="frame" x="0.0" y="0.0" width="89" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0s" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dR1-3S-t6f">
-                                        <rect key="frame" x="179.66666666666669" y="0.0" width="48" height="30"/>
+                                        <rect key="frame" x="189" y="0.0" width="48" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Best score:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1WP-mU-dD3">
+                                <rect key="frame" x="135.66666666666666" y="88" width="119" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="1WP-mU-dD3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="1WY-Lw-6bA"/>
+                            <constraint firstItem="1WP-mU-dD3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9XV-QN-kWJ"/>
                             <constraint firstItem="FT1-s3-wIX" firstAttribute="top" secondItem="cKH-fE-G2S" secondAttribute="bottom" constant="30" id="C6Z-1b-imD"/>
                             <constraint firstItem="cKH-fE-G2S" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="CFJ-XV-Ndj"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cKH-fE-G2S" secondAttribute="trailing" constant="30" id="Zq3-yZ-aal"/>
@@ -286,7 +300,7 @@
                             <constraint firstItem="FT1-s3-wIX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="nhW-ok-bNK"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Practice" id="kaG-UZ-ADV">
+                    <navigationItem key="navigationItem" id="kaG-UZ-ADV">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="gear" catalog="system" id="8Xe-ch-wee">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
@@ -295,6 +309,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="bestScoreLabel" destination="1WP-mU-dD3" id="ZOA-BO-WOb"/>
                         <outlet property="commaButton" destination="YFr-u0-sld" id="vFU-YK-dc9"/>
                         <outlet property="deleteButton" destination="dwQ-VA-8Ki" id="2I0-fe-Hao"/>
                         <outlet property="eightButton" destination="u4F-5r-AD2" id="pdH-Xy-vLb"/>
