--- a/QuickMath/View/Base.lproj/Main.storyboard
+++ b/QuickMath/View/Base.lproj/Main.storyboard
@@ -17,8 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="FT1-s3-wIX" userLabel="Num Stack View">
-                                <rect key="frame" x="30" y="410" width="330" height="400"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="FT1-s3-wIX" userLabel="Num Stack View">
+                                <rect key="frame" x="30" y="442" width="330" height="368"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="yTO-YM-3vi">
                                         <rect key="frame" x="0.0" y="0.0" width="330" height="40"/>
@@ -56,7 +56,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="VsP-hJ-PeM">
-                                        <rect key="frame" x="0.0" y="60" width="330" height="70"/>
+                                        <rect key="frame" x="0.0" y="52" width="330" height="70"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xQy-kB-A4O">
                                                 <rect key="frame" x="0.0" y="0.0" width="86.666666666666671" height="70"/>
@@ -100,7 +100,7 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="nW6-iH-dYi">
-                                        <rect key="frame" x="0.0" y="150" width="330" height="70"/>
+                                        <rect key="frame" x="0.0" y="134" width="330" height="70"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="thQ-eY-3dV">
                                                 <rect key="frame" x="0.0" y="0.0" width="86.666666666666671" height="70"/>
@@ -144,7 +144,7 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="dFS-IH-OFn">
-                                        <rect key="frame" x="0.0" y="240" width="330" height="70"/>
+                                        <rect key="frame" x="0.0" y="216" width="330" height="70"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kuR-av-ls3">
                                                 <rect key="frame" x="0.0" y="0.0" width="86.666666666666671" height="70"/>
@@ -188,7 +188,7 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="fkB-eo-wms">
-                                        <rect key="frame" x="0.0" y="330" width="330" height="70"/>
+                                        <rect key="frame" x="0.0" y="298" width="330" height="70"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8QW-wK-rvD">
                                                 <rect key="frame" x="0.0" y="0.0" width="86.666666666666671" height="70"/>
@@ -245,16 +245,16 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="cKH-fE-G2S">
-                                <rect key="frame" x="30" y="236.66666666666663" width="330" height="143.33333333333337"/>
+                                <rect key="frame" x="30" y="274.66666666666669" width="330" height="137.33333333333331"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Click start" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nG9-ep-6qL">
-                                        <rect key="frame" x="0.0" y="0.0" width="330" height="71.666666666666671"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="60"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="330" height="65.666666666666671"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="55"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dx7-Tq-VYw">
-                                        <rect key="frame" x="0.0" y="71.666666666666657" width="330" height="71.666666666666657"/>
+                                        <rect key="frame" x="0.0" y="65.666666666666629" width="330" height="71.666666666666686"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="60"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -262,7 +262,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="Pt6-4Y-7iz">
-                                <rect key="frame" x="76.666666666666686" y="201.66666666666666" width="237" height="30"/>
+                                <rect key="frame" x="76.666666666666686" y="239.66666666666666" width="237" height="29.999999999999972"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pv9-C3-G1L">
                                         <rect key="frame" x="0.0" y="0.0" width="89" height="30"/>
