--- a/QuickMath/Base.lproj/LaunchScreen.storyboard
+++ b/QuickMath/Base.lproj/LaunchScreen.storyboard
@@ -15,32 +15,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello Stanley" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gwH-Ao-PTq">
-                                <rect key="frame" x="68" y="418" width="278" height="60"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QuickMath" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qpx-B1-sve">
-                                <rect key="frame" x="113" y="814" width="188" height="48"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appLogo" translatesAutoresizingMaskIntoConstraints="NO" id="izS-il-kfZ">
+                                <rect key="frame" x="92" y="333" width="230" height="230"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="230" id="RW8-mh-qWe"/>
+                                    <constraint firstAttribute="width" constant="230" id="vSi-Ks-jFV"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Qpx-B1-sve" secondAttribute="bottom" id="5Zw-ym-o8w"/>
-                            <constraint firstItem="gwH-Ao-PTq" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="htn-ly-RSg"/>
-                            <constraint firstItem="Qpx-B1-sve" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="tQC-hQ-Ixs"/>
-                            <constraint firstItem="gwH-Ao-PTq" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="vAf-2Y-h3v"/>
+                            <constraint firstItem="izS-il-kfZ" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="H21-ux-zx4"/>
+                            <constraint firstItem="izS-il-kfZ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="uEW-C7-AFX"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="appLogo" width="1024" height="1024"/>
+    </resources>
 </document>
